# esc-pos-usb-simulator

./: LICENSE  README.md  index.html  package.json  printer.css  printer.ts  server.ts
assets/: README.md
gadget/: Cargo.toml
gadget/src/: codepage.rs  codepage_tables.rs  main.rs  protocol.rs  ws.rs
gadget/tools/: generate-codepage-tables.mjs
