[package]
name = "escpos_usb_gadget"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
bytes = "1.12.1"
env_logger = "0.11.11"
log = "0.4.33"
nusb = "0.2.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tungstenite = "0.30.0"
usb-gadget = "1.2.0"
